| Summary: | ASTERISK-26360: app_queue: "queue show" output gets "failed to extend from 240 to 327" msgs. | ||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |
| Date Opened: | 2016-09-12 11:56:50 | Date Closed: | 2016-09-12 17:54:39 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | 11.23.1 13.11.2 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When the queue members and interfaces have very long names, the output of the CLI "queue show" command generates "failed to extend from 240 to 327" messages. As you can see in the output, the lines are also truncated because the generated output line is too large to fit into the string buffer.
{noformat} sip*CLI> queue show cvikbubohirndceiaetsq cvikbubohirndceiaetsq has 0 calls (max unlimited) in 'ringall' strategy (0s holdtime, 0s talktime), W:0, C:0, A:0, SL:0.0% within 0s Members: cvikbubohirndceiaets012 (Local/cvikbubohirndceiaets012@ExternalCallFromQueue from Local/cvikbubohirndceiaets012@ExternalCallFromQueue) (ringinuse disabled) (realtime) (Not in use) has taken no cvikbubohirndceiaets248 (Local/cvikbubohirndceiaets248@ExternalCallFromQueue from Local/cvikbubohirndceiaets248@ExternalCallFromQueue) (ringinuse disabled) (realtime) (Not in use) has taken no cvikbubohirndceiaets428 (Local/cvikbubohirndceiaets428@ExternalCallFromQueue from Local/cvikbubohirndceiaets428@ExternalCallFromQueue) (ringinuse disabled) (realtime) (Not in use) has taken no cvikbubohirndceiaets461 (Local/cvikbubohirndceiaets461@ExternalCallFromQueue from Local/cvikbubohirndceiaets461@ExternalCallFromQueue) (ringinuse disabled) (realtime) (Not in use) has taken no cvikbubohirndceiaets629 (Local/cvikbubohirndceiaets629@ExternalCallFromQueue from Local/cvikbubohirndceiaets629@ExternalCallFromQueue) (ringinuse disabled) (realtime) (Not in use) has taken no No Callers failed to extend from 240 to 327 failed to extend from 240 to 327 failed to extend from 240 to 327 failed to extend from 240 to 327 failed to extend from 240 to 327 {noformat} The original reporter did not have this problem in v1.8 because several fields were added to the output line but the output string buffer was not increased to match. | ||
| Comments: | |||